Udemy-Certification/force-app/main/default/objects/Amusement__c/Amusement__c.object-meta.xml
<CustomObject>
    <label>Amusement</label>
    <nameField>
        <label>Amusement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amusements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>