Udemy-Certification/force-app/main/default/objects/Amusement__c/fields/Last_maintenance__c.field-meta.xml
<CustomField>
    <fullName>Last_maintenance__c</fullName>
    <label>Last maintenance</label>
    <required>true</required>
    <type>Date</type>
</CustomField>