Udemy-Certification/force-app/main/default/objects/Amusement__c/fields/Next_maintenance__c.field-meta.xml
<CustomField>
    <fullName>Next_maintenance__c</fullName>
    <label>Next maintenance</label>
    <required>true</required>
    <type>Date</type>
</CustomField>