Udemy-Certification/force-app/main/default/objects/Amusement__c/fields/Today_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Today_Revenue__c</fullName>
    <label>Today Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>