Udemy-Certification/force-app/main/default/objects/Amusement__c/fields/Type_last_maintenance__c.field-meta.xml
<CustomField>
    <fullName>Type_last_maintenance__c</fullName>
    <label>Type last maintenance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Predictive</fullName>
            </value>
            <value>
                <fullName>Corrective</fullName>
            </value>
            <value>
                <fullName>Preventive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>